--- a/src/features/headerNav/ui/style.module.css
+++ b/src/features/headerNav/ui/style.module.css
@@ -1,6 +1,47 @@
 .nav {
   display: flex;
   flex-direction: row;
-  gap: 43px;
+  gap: 47px;
   align-items: center;
+}
+
+.navWrapper{
+  display: flex;
+  flex-direction: row;
+gap:43px;
+}
+.nav>div:last-child{
+  display: none;
+}
+
+
+@media (max-width:1024px) {
+
+  .nav{
+    position:absolute;
+    flex-direction: column-reverse;
+
+    gap:35px;
+    right: 0;
+    z-index: -1;
+    width: 100%;
+    padding:42px 36px;
+    border-bottom: 1px solid #DCDCDC;
+    background-color: white;
+    justify-content: start;
+    opacity: 0;
+    transition:0.3s;
+    top:-100%;
+  }
+
+  .nav.isOpen{
+    z-index: 1;
+    opacity: 1;
+    top:100%;
+  }
+
+  .nav>div:last-child{
+    display: flex;
+  }
+  
 }
