--- a/src/shared/styles/fonts.module.css
+++ b/src/shared/styles/fonts.module.css
@@ -51,3 +51,14 @@
   letter-spacing: 0px;
   text-align: left;
 }
+
+.link-text-norm,
+.linkTextNorm{
+  color: rgb(0, 117, 255);
+font-family: Montserrat;
+font-size: 18px;
+font-weight: 500;
+line-height: 142.5%;
+letter-spacing: 0px;
+text-align: left;
+}
