--- a/src/widgets/header/ui/style.module.css
+++ b/src/widgets/header/ui/style.module.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   padding: 24px 55px;
+  position: relative;
+  background-color: white;
 }
 
 .header>div {
