--- a/src/features/headerNav/ui/style.module.css
+++ b/src/features/headerNav/ui/style.module.css
@@ -5,43 +5,67 @@
   align-items: center;
 }
 
-.navWrapper{
+.navWrapper {
   display: flex;
   flex-direction: row;
-gap:43px;
+  gap: 43px;
 }
-.nav>div:last-child{
+
+.nav>div:last-child {
   display: none;
 }
 
 
 @media (max-width:1024px) {
 
-  .nav{
-    position:absolute;
+  .nav {
+    position: absolute;
     flex-direction: column-reverse;
 
-    gap:35px;
+    gap: 35px;
     right: 0;
     z-index: -1;
     width: 100%;
-    padding:42px 36px;
+    padding: 42px 36px;
     border-bottom: 1px solid #DCDCDC;
     background-color: white;
     justify-content: start;
     opacity: 0;
-    transition:0.3s;
-    top:-100%;
+    transition: 0.3s;
+    top: -100%;
   }
 
-  .nav.isOpen{
+  .nav.isOpen {
     z-index: 1;
     opacity: 1;
-    top:100%;
+    top: 100%;
   }
 
-  .nav>div:last-child{
+  .nav>div:last-child {
     display: flex;
   }
-  
+
+
+
+}
+
+@media (max-width:480px) {
+  .nav {
+    gap: 25px;
+    min-height: 100vh;
+    height: min-content;
+    top: 100% !important;
+    right: -100%;
+  }
+
+  .nav.isOpen {
+    right: 0;
+  }
+
+  .navWrapper {
+    flex-direction: column;
+    justify-content: start;
+    width: 100%;
+    gap: 18px;
+  }
 }
