--- a/src/widgets/header/ui/style.module.css
+++ b/src/widgets/header/ui/style.module.css
@@ -13,3 +13,15 @@
   flex-direction: row;
   justify-content: space-between;
 }
+
+@media (max-width:1024px) {
+  .header {
+    padding: 24px 40px;
+  }
+}
+
+@media (max-width:480px) {
+  .header {
+    padding: 16px 20px;
+  }
+}
