--- a/src/shared/styles/fonts.module.css
+++ b/src/shared/styles/fonts.module.css
@@ -16,7 +16,7 @@
   font-weight: 400;
   line-height: 142.5%;
   letter-spacing: 0px;
-  text-align: left;
+
 }
 
 .text-small,
@@ -27,7 +27,7 @@
   font-weight: 400;
   line-height: 142.5%;
   letter-spacing: 0px;
-  text-align: center;
+
 }
 
 .text-passive--3,
@@ -38,7 +38,7 @@
   font-weight: 400;
   line-height: 142.5%;
   letter-spacing: 0px;
-  text-align: left;
+
 }
 
 .title-med,
@@ -49,7 +49,7 @@
   font-weight: 500;
   line-height: 20px;
   letter-spacing: 0px;
-  text-align: left;
+
 }
 
 .dropdown-point,
@@ -60,7 +60,7 @@
   font-weight: 500;
   line-height: 142.5%;
   letter-spacing: 0px;
-  text-align: left;
+
 }
 
 .dropdown-sub-point,
@@ -81,7 +81,7 @@
   font-weight: 500;
   line-height: 142.5%;
   letter-spacing: 0px;
-  text-align: left;
+
 }
 
 .link-text-mini,
@@ -92,7 +92,7 @@
   font-weight: 400;
   line-height: 16px;
   letter-spacing: 0px;
-  text-align: left;
+
 }
 
 .sign-text,
@@ -103,7 +103,7 @@
   font-weight: 400;
   line-height: 16px;
   letter-spacing: 0px;
-  text-align: left;
+
 }
 
 .header-nav-text,
@@ -123,7 +123,7 @@
   font-weight: 700;
   line-height: 68px;
   letter-spacing: 0px;
-  text-align: left;
+  user-select: none;
 }
 
 .button-text-norm,
@@ -134,7 +134,7 @@
   font-weight: 500;
   line-height: 142.5%;
   letter-spacing: 0px;
-  text-align: center;
+
 }
 
 .button-text-med,
@@ -145,7 +145,7 @@
   font-weight: 600;
   line-height: 142.5%;
   letter-spacing: 0px;
-  text-align: left;
+
 }
 
 @media (max-width:1024px) {
@@ -160,7 +160,7 @@
     font-weight: 400;
     line-height: 142.5%;
     letter-spacing: 0px;
-    text-align: left;
+
   }
 
   .header-nav-text,
@@ -171,7 +171,7 @@
     font-weight: 500;
     line-height: 142.5%;
     letter-spacing: 0px;
-    text-align: left;
+
   }
 
 
@@ -183,7 +183,7 @@
     font-weight: 400;
     line-height: 142.5%;
     letter-spacing: 0px;
-    text-align: left;
+
   }
 
   .button-text-norm,
@@ -194,7 +194,7 @@
     font-weight: 500;
     line-height: 142.5%;
     letter-spacing: 0px;
-    text-align: center;
+
   }
 }
 
