--- a/src/widgets/welcome/ui/style.module.css
+++ b/src/widgets/welcome/ui/style.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row;
   align-items: start;
+  padding: 55px;
 }
 
 .wrapper {
@@ -10,4 +11,9 @@
   flex-direction: column;
   width: 425px;
   gap: 30px;
+}
+
+.img {
+  position: relative;
+  right: 0;
 }
