--- a/src/entities/buttons/ui/takeTest/style.module.css
+++ b/src/entities/buttons/ui/takeTest/style.module.css
@@ -26,3 +26,14 @@
 .button:active {
   opacity: 0.7;
 }
+
+@media(max-width:1024px){
+.button{
+  width: 177px;
+}
+@media(max-width:480px){
+.button{
+  width: 166px;
+}
+}
+}
