--- a/src/shared/styles/fonts.module.css
+++ b/src/shared/styles/fonts.module.css
@@ -148,6 +148,17 @@
 
 }
 
+.card-title,
+.cardTitle{
+  color: rgba(44, 59, 72, 1);;
+font-family: Montserrat;
+font-size: 28px;
+font-weight: 600;
+line-height: 68px;
+letter-spacing: 0px;
+text-align: left;
+}
+
 @media (max-width:1024px) {
 
   .dropdown-point,
@@ -195,6 +206,26 @@
     line-height: 142.5%;
     letter-spacing: 0px;
 
+  }
+  .heading{
+    color: rgba(44, 59, 72, 1);
+    font-family: Montserrat;
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 51.5px;
+    letter-spacing: 0px;
+    text-align: left;
+  }
+
+  .card-title,
+  .cardTitle{
+    color: rgba(44, 59, 72, 1);;
+font-family: Montserrat;
+font-size: 24px;
+font-weight: 600;
+line-height: 68px;
+letter-spacing: 0px;
+user-select: none;
   }
 }
 
